resources/media-store/transmission/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  ports:
    - name: web
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: transmission
  type: ClusterIP
