resources/media-store/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: transmission
spec:
  rules:
    - host: transmission.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: transmission
              servicePort: 9091
